fix overflow

--- a/css/main.scss
+++ b/css/main.scss
@@ -190,6 +190,7 @@ h5 {
 
 
 #about {
+    overflow: hidden;
     padding: 0 15%;
     background-color: rgba(218, 218, 218, 0.9);
     position: relative;
@@ -248,6 +249,7 @@ h5 {
             rgb(225, 225, 225));
     color: white;
     padding-bottom: 3em;
+    margin-top: -8px;
 
     .img-wrapper {
         position: relative;
